<resources>
    <string name="app_name">ChamadaActivity02</string>
    <string name="nome">Nome</string>
    <string name="possui_carro">Possui Carro</string>
    <string name="aluno">Aluno</string>
    <string name="professor">Professor</string>
    <string name="enviar">Enviar</string>
    <string name="nao_cadastrado">Não Cadastrado</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="nenhum_tipo_escolhido">Nenhum tipo escolhido</string>
    <string name="dados_cadastrados">Dados Cadastrados</string>
    <string name="enviar_pedir_nota">Enviar com nota</string>
    <string name="nota">\"Nota: \"</string>
</resources>