<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/checkBoxPossuiCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/possui_carro"
        app:layout_constraintStart_toStartOf="@+id/editTextTextNome"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextNome" />

    <RadioGroup
        android:id="@+id/radioGroupTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxPossuiCarro"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPossuiCarro" >

        <RadioButton
            android:id="@+id/radioButtonAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aluno" />

        <RadioButton
            android:id="@+id/radioButtonProfessor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/professor" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="enviar"
        android:text="@string/enviar"
        app:layout_constraintStart_toStartOf="@+id/radioGroupTipo"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupTipo" />

</android.support.constraint.ConstraintLayout>